src/objects/ffct__DateMoverState__c.object
<CustomObject>
    <description>Lists the configuration details for the date mover process.</description>
    <fields>
        <fullName>ffct__BaseObjectDateField__c</fullName>
        <label>BaseObjectDateField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Errors__c</fullName>
        <label>Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__FieldsToBlacklist__c</fullName>
        <label>FieldsToBlacklist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__NumberOfdays__c</fullName>
        <label>NumberOfDays</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffct__Packages__c</fullName>
        <label>Packages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffct__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>CompleteWithErrors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Date Mover State</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DMS-{0000}</displayFormat>
        <label>Date Mover State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Date Mover States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>